W01 Assignment: Course Home Page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <section class="right">
                 <h2>Ho-Volta Region, Ghana</h2>
                 <div class="kente">
-                <img src="images/kente.jpeg" alt="Kente" title="Kente">
+                <img src="images/kente.webp" alt="Kente" title="Kente">
 
                 </div>                <p>Kente</p>
             </section>
