--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="profile">
             <img src="images/profile.jpg" alt="My Profile">
-            <span>Gideon Komla Agbavor</span>
+            <span>Gideon K. Agbavor</span>
         </div>
         <nav class="links">
             <ul>
