W02 Assignment: Chamber Directory Page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Course Home Page</title>
     <meta name="description" content="">
     <meta name="author" content="Gideon Komla Agbavor">
+    <!-- <meta name="home page:title" content="Applying HTML, CSS, and JavaScript to the design and development of a course home page." /> -->
+    <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:wght@400;500;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -15,6 +17,14 @@
     <script src="scripts/course.js" defer></script>
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
+
+    <!-- Open Graph meta properties -->
+    <meta property="og:title" content="Course Home Page">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://example.com/path/to/your/image.jpg">
+    <meta property="og:url" content="https://example.com/path/to/your/page">
+
+    
 </head>
 <body>
     <header>
