W02 Assignment: Chamber Directory Page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="Hliha Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://example.com/path/to/image.jpg">
-    <meta property="og:url" content="http://127.0.0.1:5500/chamber/directory.html">
+    <meta property="og:url" content="https://gideonagbavor8.github.io/wdd231/chamber/directory.html">
 </head>
 <body>
     <header>
