--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/hliha.jpg" alt="Business Logo" loading="lazy">
+            <img src="images/hliha.webp" alt="Business Logo" loading="lazy">
         </div>
         <div class="comp-name">
             <h1>Hliha</h1>
@@ -54,7 +54,7 @@
     </header>
 
     <div class="hero">
-        <img src="images/hero.jpg" alt="Hero Image" loading="lazy">
+        <img src="images/hero.webp" alt="Hero Image" loading="lazy">
     </div>
 
     <main>
@@ -86,7 +86,7 @@
                 <h2>Weather Forecast</h2>
                 <div>
                     <ul>
-                        <li>Today - <Span>90º F</Span></li>
+                        <li>Today - <span>90º F</span></li>
                         <li>Wednesday - <span>89º F</span></li>
                         <li>Tuesday - <span>68º F</span></li>
                     </ul>
