W02 Assignment: Chamber Directory Page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,9 +32,10 @@
             <h1>Hliha</h1>
             <p>Chamber of Commerce</p>
         </div>
-        <div class="theme-toggle-small">
-            <button id="theme-toggle-button-small">🌗</button>
-        </div>
+        <!-- <div class="theme-toggle-small">
+            <button id="theme-toggle-button-small"></button>
+            <img id="theme-image" src="images/light.png" alt="Theme Icon">
+        </div> -->
         <div class="menu-toggle-small">
             <button id="menu-toggle-button">☰</button>
         </div>
@@ -44,12 +45,16 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="discover.html">Discover</a></li>
+                <li><a href="discovery.html">Discovery</a></li>
             </ul>
         </nav>
-        <div class="theme-toggle">
-            <button id="theme-toggle-button">🌗</button>
-        </div>
+        <button id="theme-toggle-button">
+            <img src="images/dark.png" alt="Toggle Theme">
+        </button>
+        <!-- <div class="theme-toggle">
+            <button id="theme-toggle-button"></button>
+            <img id="theme-image" src="images/light.png" alt="Theme Icon">
+        </div> -->
         
     </header>
 
