W02 Assignment: Chamber Directory Page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -29,7 +29,7 @@
             <img src="images/hliha.webp" alt="Business Logo" loading="lazy">
         </div>
         <div class="comp-name">
-            <h1>Hliha</h1>
+            <p class="company">Hliha</p>
             <p>Chamber of Commerce</p>
         </div>
         <!-- <div class="theme-toggle-small">
