--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -63,7 +63,7 @@
     </div>
 
     <main>
-        <h1>Directory</h1>
+        <h1>Directory Page</h1>
         <div class="container">
             <section class="events">
                 <h2>Upcoming Events</h2>
