W02 Assignment: Chamber Directory Page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directory Page</title>
+    <title>Chamber of Commerce: Directory Page</title>
     <meta name="description" content="The Chamber of Commerce Site Plan.">
     <meta name="author" content="Gideon Komla Agbavor">
     <link rel="icon" href="favicon.ico">
@@ -18,7 +18,7 @@
     <script src="scripts/directory.js" defer></script>
 
     <!-- Facebook Open Graph meta tags -->
-    <meta property="og:title" content="Hliha Chamber of Commerce">
+    <meta property="og:title" content="Chamber of Commerce Directory Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://example.com/path/to/image.jpg">
     <meta property="og:url" content="https://gideonagbavor8.github.io/wdd231/chamber/directory.html">
