--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chamber of Commerce: Directory Page</title>
+    <title>Directory Page: Chamber of Commerce</title>
     <meta name="description" content="The Chamber of Commerce Site Plan.">
     <meta name="author" content="Gideon Komla Agbavor">
     <link rel="icon" href="favicon.ico">
