--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Directory Page: Chamber of Commerce</title>
-    <meta name="description" content="The Chamber of Commerce Site Plan.">
+    <meta name="description" content="The Chamber of Commerce Directory Page.">
     <meta name="author" content="Gideon Komla Agbavor">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
