--- a/chamber/index.html
+++ b/chamber/index.html
@@ -91,7 +91,7 @@
             <section class="current-weather">
                 <h2>Current Weather</h2>
                 <div class="weather-card">
-                    <p><img id="weather-icon" src="" alt=""></p>
+                    <p><img id="weather-icon" src="https://openweathermap.org/img/w/${data.weather[0].icon}.png`" alt=" Current"></p>
                     <p>Temperature: <span id="current-temp"></span></p>
                     <p>Description: <span id="weather-desc"></span></p>
                     <p>Chance of Rain: <span id="rain-chance"></span></p>
@@ -141,7 +141,6 @@
             <p>Gideon Komla Agbavor</p>
             <p>©<span id="currentyear"></span> Hliha Chamber of Commerce</p>
             <p id="lastModified"></p>
-            <p>OpenWeatherMap.org | CC BY-SA 4.0</p>
         </div>
     </footer>
 
