--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -80,7 +80,7 @@
             <section class="current-weather">
                 <h2>Current Weather</h2>
                 <div class="weather-card">
-                    <p><img id="weather-icon" src="" alt=""></p>
+                    <p><img id="weather-icon" src="https://openweathermap.org" alt=" Current"></p>
                     <p>Temperature: <span id="current-temp"></span></p>
                     <p>Description: <span id="weather-desc"></span></p>
                     <p>Chance of Rain: <span id="rain-chance"></span></p>
