W03 Assignment: Chamber Home Page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,15 +61,16 @@
 
     <div class="hero">
         <img src="images/hero.webp" alt="Hero Image" loading="lazy">
-        <div class="hero-text">
+        <!-- <div class="hero-text">
             <p>Welcome to Hliha Chamber of Commerce</p>
             <p>Empowering Businesses and Communities</p>
+        </div> -->
+        <div class="call-to-action">
+            <a href="join.html" class="cta-button">Join the Chamber of Commerce</a>
         </div>
     </div>
 
-    <div class="call-to-action">
-        <a href="join.html" class="cta-button">Join the Chamber of Commerce</a>
-    </div>
+    
 
     <main>
         <h1>Home</h1>
