W03 Assignment: Chamber Home Page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -129,7 +129,7 @@
             <p class="hliha">Hliha Chamber of Commerce</p>
             <p>Togbe Tawiah Street</p>
             <p>VH-0001-8877</p>
-            <p><a href="mailto:info@hlihachamber.com">info@hlihachamber.com</a></p>
+            <p><a href="info@hlihachamber.com">info@hlihachamber.com</a></p>
             <p>(233) 55 454 7692</p>
         </div>
         <div class="center">
