W04: Chamber Membership Join Page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -59,9 +59,16 @@
         
     </header>
 
-    <!-- <div class="hero">
+    <div class="hero">
         <img src="images/hero.webp" alt="Hero Image" loading="lazy">
-    </div> -->
+        <!-- <div class="hero-text">
+            <p>Welcome to Hliha Chamber of Commerce</p>
+            <p>Empowering Businesses and Communities</p>
+        </div> -->
+        <div class="call-to-action">
+            <a href="join.html" class="cta-button">Join the Chamber of Commerce</a>
+        </div>
+    </div>
 
     <main>
         <h1>Directory Page</h1>
