--- a/chamber/join.html
+++ b/chamber/join.html
@@ -77,6 +77,7 @@
 
         <form method="GET" action="thankyou.html">
             <h2>Membership Application Form</h2>
+            <p><span class="required">*</span> Indicates a required field</p>
             <label for="firstName">First Name: <span class="required">*</span>
                 <input type="text" id="firstName" name="firstName" title="Your First Name" required autocomplete="given-name">
             </label>
