W04: Chamber Membership Join Page

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -97,7 +97,7 @@
                 <input type="text" id="businessName" name="businessName" title="Your Business Name" required autocomplete="organization">
             </label>
             <label for="membership">Membership Level: <span class="required">*</span>
-                <select id="membership" name="membership" required>
+                <select id="membership" name="membership">
                     <option value="np">Non-Profit</option>
                     <option value="bronze">Bronze</option>
                     <option value="silver">Silver</option>
