Teacher Training and Development Website Plan

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,7 +46,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="discovery.html">Discovery</a></li>
+                <li><a href="discover.html">Discovery</a></li>
             </ul>
         </nav>
         <button id="theme-toggle-button">
