W05: Chamber Discover Page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Directory Page: Chamber of Commerce</title>
-    <meta name="description" content="Chamber of Commerce Directory Page.">
+    <title>Discover Page: Chamber of Commerce</title>
+    <meta name="description" content="Chamber of Commerce Discover Page.">
     <meta name="author" content="Gideon Komla Agbavor">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,10 +17,10 @@
     <script src="scripts/directory.js" defer></script>
     <script src="scripts/discover.js"></script>
     <!-- Facebook Open Graph meta tags -->
-    <meta property="og:title" content="Chamber of Commerce Directory Page">
+    <meta property="og:title" content="Chamber of Commerce Discover Page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://example.com/path/to/image.jpg">
-    <meta property="og:url" content="https://gideonagbavor8.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://gideonagbavor8.github.io/wdd231/chamber/discover.html">
 </head>
 <body class="home">
     <header>
