--- a/wdd231-project/index.html
+++ b/wdd231-project/index.html
@@ -66,12 +66,13 @@
             <!-- Large screens -->
             <source srcset="images/classroom-large.webp" media="(min-width: 1025px)">
             <!-- Fallback image for unsupported browsers -->
-            <img src="images/classroom-default.webp" alt="Educators working together" loading="lazy" />
+            <img src="images/classroom-default.webp" alt="Educators working together" loading="lazy">
         </picture>
         <div class="hero-text">
             <h1>Empowering Educators</h1>
             <p>Your hub for resources, strategies, and growth opportunities.</p>
             <a href="contact.html" class="cta">Get in Touch</a>
+            
 
         </div>
 
