--- a/wdd231-project/development.html
+++ b/wdd231-project/development.html
@@ -61,7 +61,7 @@
             <!-- Large screens -->
             <source srcset="images/classroom-large.webp" media="(min-width: 1025px)">
             <!-- Fallback image for unsupported browsers -->
-            <img src="images/classroom-default.webp" alt="Educators working together" loading="lazy"/>
+            <img src="images/classroom-default.webp" alt="Educators working together" loading="lazy">
         </picture>
         <div class="hero-text">
             <h1>Empowering Educators</h1>
