--- a/wdd231-project/resources.html
+++ b/wdd231-project/resources.html
@@ -60,7 +60,7 @@
             <!-- Large screens -->
             <source srcset="images/classroom-large.webp" media="(min-width: 1025px)">
             <!-- Fallback image for unsupported browsers -->
-            <img src="images/classroom-default.webp" alt="Educators working together"/>
+            <img src="images/classroom-default.webp" alt="Educators working together">
         </picture>
         <div class="hero-text">
             <h1>Empowering Educators</h1>
